# eresult

./: CMakeLists.txt  LICENSE  README.md  ResultBase.h  main.cpp
